A beautiful web application that automatically generates and publishes Instagram posts based on product information

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <script>
         // Replace this with your actual webhook URL
-        const WEBHOOK_URL = 'YOUR_WEBHOOK_URL_HERE';
+        const WEBHOOK_URL = 'https://automate.tech-takeover.net/webhook-test/8f109fee-9713-4709-8ec2-957935850dc0';
 
         document.getElementById('postForm').addEventListener('submit', async function(e) {
             e.preventDefault();
