--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
 
     <script>
         // Configuration
-        //const WEBHOOK_URL = 'https://automate.tech-takeover.net/webhook/8f109fee-9713-4709-8ec2-957935850dc0';
-        const WEBHOOK_URL = "https://automate.tech-takeover.net/webhook-test/8f109fee-9713-4709-8ec2-957935850dc0"
+        const WEBHOOK_URL = 'https://automate.tech-takeover.net/webhook/8f109fee-9713-4709-8ec2-957935850dc0';
+        //const WEBHOOK_URL = "https://automate.tech-takeover.net/webhook-test/8f109fee-9713-4709-8ec2-957935850dc0"
         
         let currentSessionId = null;
         let currentFormData = null;
